<resources>
    <string name="app_name">StringStyling</string>
    <string name="btn_style_primary">Primary Style Button</string>
    <string name="btn_style_rounded">Round styled button\n</string>
    <string name="btn_style_rounded2">gradient style button\n</string>
    <string name="btn_style_3">"outlined button "</string>
    <string name="chat_text">Hi,How are you</string>
    <string name="chat_text2">Hello,I am good\n</string>
    <string name="btn_style">Button</string>
    <string name="str_stylish_font">Stylish font</string>

</resources>