<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:text="@string/btn_style_primary"
        android:textColor="@color/color_primary_text"
        android:backgroundTint="@color/color_primary"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:background="@drawable/rounded_button_style"
        android:text="@string/btn_style_rounded"
        />

    <View
        android:layout_width="@dimen/dimen_120_dp"
        android:layout_height="@dimen/dimen_120_dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/dimen_16_dp"
        android:background="@drawable/gradient_button_style"
        android:elevation="@dimen/dimen_16_dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:background="@drawable/gradient_style_2"
        android:text="@string/btn_style_rounded2"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:background="@drawable/button_style_3"
        android:text="@string/btn_style_3"
        android:textColor="@color/color_primary_text"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_30_dp"
        android:layout_marginStart="@dimen/dimen_16_dp"
        android:background="@drawable/chat_style"
        android:fontFamily="cursive"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dimen_16_dp"
        android:text="@string/chat_text"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/dimen_22_sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_30_dp"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/dimen_16_dp"
        android:background="@drawable/chat_style_2"
        android:fontFamily="cursive"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dimen_16_dp"
        android:text="@string/chat_text2"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/dimen_22_sp"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btntoggleFav"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/toggle_style_selector"
        android:clickable="true"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="@dimen/dimen_90_dp"
        android:layout_height="@dimen/dimen_90_dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        app:shapeAppearanceOverlay="@style/CircleImageStyle"/>

    <Button
        style="@style/ButtonStyle3"
        android:text="@string/btn_style"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_120_dp"
        android:textSize="@dimen/dimen_22_sp"
        android:text="@string/str_stylish_font"
        android:fontFamily="@font/almendra_sc"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_120_dp"
        android:textSize="@dimen/dimen_22_sp"
        android:text="@string/str_stylish_font"
        android:fontFamily="@font/akaya_telivigala"/>


</LinearLayout>